exports[`Card has correct default options 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-small grommetux-tile grommetux-card grommetux-card--direction-column grommetux-card--medium grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-1 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--justify-center grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-none grommetux-card__thumbnail"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={
        Object {
          "background": "url(http://grommet.github.io/img/carousel-1.png) no-repeat center center",
          "backgroundSize": "cover"
        }
      }
      tabIndex={undefined} />
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <label
        className="grommetux-label grommetux-card__label grommetux-label--uppercase grommetux-label--margin-none grommetux-label--medium"
        htmlFor={undefined}>
        Featured Post
      </label>
      <h2
        className="grommetux-heading grommetux-heading--strong grommetux-heading--margin-none grommetux-card__heading"
        dangerouslySetInnerHTML={undefined}
        id={undefined}>
        The Key Steps to Reducing Software Spend
      </h2>
      <p
        className="grommetux-paragraph grommetux-card__text grommetux-paragraph--medium grommetux-paragraph--margin-none"
        dangerouslySetInnerHTML={undefined}
        id={undefined}>
        HPE Software Licensing and Management Solutions can help you optimize your software investments through control of complex negotiations and renewal processes
      </p>
    </div>
  </div>
</div>
`;

exports[`Card renders a header with the set size 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-small grommetux-tile grommetux-card grommetux-card--direction-column grommetux-card--large grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-1 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <label
        className="grommetux-label grommetux-card__label grommetux-label--uppercase grommetux-label--margin-none grommetux-label--medium"
        htmlFor={undefined}>
        Hello from Grommet
      </label>
    </div>
  </div>
</div>
`;

exports[`Card renders correctly when reverse 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--align-center grommetux-box--reverse grommetux-box--responsive grommetux-box--pad-small grommetux-tile grommetux-card grommetux-card--direction-column grommetux-card--medium grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--justify-between grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-1 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <label
        className="grommetux-label grommetux-card__label grommetux-label--uppercase grommetux-label--margin-none grommetux-label--medium"
        htmlFor={undefined}>
        Hello from Grommet
      </label>
    </div>
  </div>
</div>
`;

exports[`Card renders correctly when the direction is set to row 1`] = `
<div
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-vertical-small grommetux-tile grommetux-card grommetux-card--direction-row grommetux-card--medium grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--full-horizontal grommetux-box--direction-row grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-1 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <label
        className="grommetux-label grommetux-card__label grommetux-label--uppercase grommetux-label--margin-none grommetux-label--medium"
        htmlFor={undefined}>
        Hello from Grommet
      </label>
    </div>
  </div>
</div>
`;

exports[`Card renders correctly when the headingStrong is false 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-small grommetux-tile grommetux-card grommetux-card--direction-column grommetux-card--medium grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-1 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}>
      <label
        className="grommetux-label grommetux-card__label grommetux-label--uppercase grommetux-label--margin-none grommetux-label--medium"
        htmlFor={undefined}>
        Hello from Grommet
      </label>
    </div>
  </div>
</div>
`;

exports[`Card renders correctly with a non-default colorIndex 1`] = `
<div
  className="grommetux-box grommetux-box--direction-column grommetux-box--align-center grommetux-box--responsive grommetux-box--pad-small grommetux-tile grommetux-card grommetux-card--direction-column grommetux-card--medium grommetux-none-hover-color-index-disabled grommetux-tile--hover-border-small"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-background-color-index-light-2 flex"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}>
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-card__content"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined} />
  </div>
</div>
`;
